[tool.poetry]
name = "prepbridge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
langchain-groq = "^0.1.9"
langchain = "^0.2.16"
langchain-core = "^0.2.38"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
pypdf = "^4.3.1"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
langchain-experimental = "^0.0.65"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
